--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <appSettings></appSettings>
   <system.web>
-    <customErrors mode="Off" />
+    <customErrors mode="On" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
